# SDL_lava

./: COPYING  README.md  meson.build
assets/models/: Duck.mtl  cow.glb
assets/shaders/: flat_texture.frag  flat_texture.vert
include/: HandmadeMath.h  SDL_lava.h  SDL_lava_commands.h  SDL_lava_import.h  SDL_lava_memory.h  SDL_lava_utils.h
src/: SDL_lava.c  SDL_lava_commands.c  SDL_lava_import.c  SDL_lava_memory.c  SDL_lava_utils.c  main.c  meson.build
